perf:提交评教成功率 feat:日课表快捷工具可隐藏 feat:漓江学堂快捷链接 perf:查询学分绩速度 perf:新用户默认每天更新课表

--- a/app/src/main/res/layout/fragment_day_class.xml
+++ b/app/src/main/res/layout/fragment_day_class.xml
@@ -37,6 +37,7 @@
     </RelativeLayout>
 
     <LinearLayout
+        android:id="@+id/day_class_tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
