--- a/app/src/main/res/layout/fragement_more.xml
+++ b/app/src/main/res/layout/fragement_more.xml
@@ -614,6 +614,46 @@
                                 android:layout_height="wrap_content"
                                 android:orientation="vertical"
                                 android:layout_weight="1">
+                                <RelativeLayout
+                                    android:id="@+id/more_url_lijiang"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center"
+                                    android:layout_marginTop="6dp"
+                                    android:layout_marginBottom="10dp"
+                                    android:layout_marginLeft="10dp"
+                                    android:layout_marginRight="10dp"
+                                    android:layout_weight="1"
+                                    android:orientation="vertical">
+
+                                    <ImageView
+                                        android:id="@+id/more_url_lijiang_picture"
+                                        android:layout_width="34dp"
+                                        android:layout_height="34dp"
+                                        android:layout_centerHorizontal="true"
+                                        android:layout_weight="1"
+                                        android:baselineAlignBottom="false"
+                                        android:src="@drawable/m_xuexiao" />
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_below="@+id/more_url_lijiang_picture"
+                                        android:layout_centerInParent="true"
+                                        android:layout_weight="1"
+                                        android:text="漓江学堂"
+                                        android:textSize="13dp" />
+
+                                </RelativeLayout>
+
+
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical"
+                                android:layout_weight="1">
 
                                 <RelativeLayout
                                     android:id="@+id/more_url_more"
@@ -646,14 +686,6 @@
                                         android:textSize="13dp" />
 
                                 </RelativeLayout>
-
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical"
-                                android:layout_weight="1">
 
                             </LinearLayout>
 
