--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,129 +1,125 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_gravity="center_vertical"
     tools:context=".MainActivity">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_marginTop="40dp">
-
-        <ImageView
-            android:layout_width="290dp"
-            android:layout_height="290dp"
-            android:src="@drawable/logo"
-            android:layout_centerInParent="true" />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginTop="48dp">
-
-        <ImageView
-            android:layout_width="39dp"
-            android:layout_height="27dp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginLeft="8dp"
-            android:layout_marginBottom="13dp"
-            android:src="@drawable/tab_user" />
-
-        <EditText
-            android:id="@+id/et_account"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_gravity="center"
-            android:layout_marginStart="56dp"
-            android:layout_marginEnd="28dp"
-            android:layout_marginBottom="4dp"
-            android:hint="请输入学号"
-            android:inputType="text"
-            android:textSize="20dp"
-            android:maxLines="1" />
+            android:layout_height="wrap_content">
 
-    </RelativeLayout>
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="15dp"
+                android:src="@drawable/logo" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginTop="16dp">
+            <TextView
+                style="@style/TextStyle.Title"
+                android:layout_width="match_parent"
+                android:layout_margin="15dp"
+                android:text="桂电课程表"
+                android:textSize="35sp"
+                android:textStyle="bold" />
 
-        <ImageView
-            android:layout_width="39dp"
-            android:layout_height="27dp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginLeft="8dp"
-            android:layout_marginBottom="13dp"
-            android:src="@drawable/password" />
+        </RelativeLayout>
 
-        <EditText
-            android:id="@+id/et_pwd"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
-            android:layout_alignParentBottom="true"
-            android:inputType="textPassword"
-            android:hint="请输入教务系统密码"
-            android:layout_marginStart="56dp"
-            android:layout_marginEnd="28dp"
-            android:textSize="20dp"
-            android:maxLines="1"/>
+            android:layout_height="48dp"
+            android:layout_marginTop="48dp">
 
-        <ImageView
-            android:id="@+id/iv_pwd_switch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="17dp"
-            android:src="@drawable/ic_baseline_visibility_off_24" />
+            <ImageView
+                android:layout_width="39dp"
+                android:layout_height="27dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="13dp"
+                android:src="@drawable/tab_user" />
 
-    </RelativeLayout>
+            <EditText
+                android:id="@+id/et_account"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_gravity="center"
+                android:layout_marginStart="56dp"
+                android:layout_marginEnd="28dp"
+                android:layout_marginBottom="4dp"
+                android:hint="请输入学号"
+                android:inputType="text"
+                android:maxLines="1"
+                android:textColorHint="@color/xui_config_color_50_pure_black"
+                android:textSize="20sp" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="16dp">
+        </RelativeLayout>
 
-        <CheckBox
-            android:id="@+id/cb_remember_pwd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/colorPrimary"
-            android:layout_marginLeft="16dp"
-            android:text="记住密码"
-            android:layout_marginBottom="4dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"/>
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_marginBottom="32dp"
-        android:layout_margin="8dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1">
-
-        <Button
-            android:id="@+id/login"
-            android:text="登录"
-            android:textSize="25dp"
-            android:textColor="@android:color/white"
-            android:background="@color/colorPrimary"
-            android:layout_marginTop="32dp"
-            android:layout_alignParentTop="true"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="48dp"
+            android:layout_marginTop="16dp">
 
-    </RelativeLayout>
+            <ImageView
+                android:layout_width="39dp"
+                android:layout_height="27dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="13dp"
+                android:src="@drawable/password" />
+
+            <EditText
+                android:id="@+id/et_pwd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="56dp"
+                android:layout_marginEnd="28dp"
+                android:layout_marginBottom="4dp"
+                android:hint="请输入教务系统密码"
+                android:inputType="textPassword"
+                android:maxLines="1"
+                android:textColorHint="@color/xui_config_color_50_pure_black"
+                android:textSize="20sp" />
+
+            <ImageView
+                android:id="@+id/iv_pwd_switch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginEnd="32dp"
+                android:layout_marginBottom="17dp"
+                android:src="@drawable/ic_baseline_visibility_off_24" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="16dp">
+
+            <CheckBox
+                android:id="@+id/cb_remember_pwd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginLeft="16dp"
+                android:layout_marginBottom="4dp"
+                android:text="记住密码"
+                android:textColor="@color/theme_black" />
+
+        </RelativeLayout>
+
+    <com.xuexiang.xui.widget.textview.supertextview.SuperButton
+        android:id="@+id/login"
+        style="@style/SuperButton.Primary.Login"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:text="登录" />
 
 </LinearLayout>
