perf:设置学期用户头像 feat:更新检测，提醒，下载，安装（部分机型需要点两次），小米用户自动更新 perf:适当延长启动页时间

--- a/app/src/main/res/layout/activity_set_term.xml
+++ b/app/src/main/res/layout/activity_set_term.xml
@@ -53,8 +53,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:tint="@color/colorPrimary"
-            android:src="@drawable/table" />
+            android:src="@drawable/p_huiyuan" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
