--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -52,7 +52,7 @@
                 android:layout_height="wrap_content"
                 android:text="前言:"
                 android:textColor="@color/colorPrimary"
-                android:textSize="22dp" />
+                android:textSize="20dp" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -69,7 +69,7 @@
                 android:layout_height="wrap_content"
                 android:text="欢迎大家加入讨论群:"
                 android:textColor="@color/colorPrimary"
-                android:textSize="22dp" />
+                android:textSize="20dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -119,12 +119,12 @@
                 android:layout_height="wrap_content"
                 android:text="开发者："
                 android:textColor="@color/colorPrimary"
-                android:textSize="22dp" />
+                android:textSize="20dp" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="wing  |  tank  |  uuin"
+                android:text="wing  |  tank  |  uuin  |  ssbird"
                 android:textColor="@color/app_black"
                 android:textSize="20dp" />
 
@@ -137,7 +137,7 @@
                 android:layout_height="wrap_content"
                 android:text="协助测试人员："
                 android:textColor="@color/colorPrimary"
-                android:textSize="22dp" />
+                android:textSize="20dp" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -152,9 +152,9 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="项目开源："
+                android:text="项目开源：(引用请注明)"
                 android:textColor="@color/colorPrimary"
-                android:textSize="22dp" />
+                android:textSize="20dp" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -172,7 +172,7 @@
                 android:layout_height="wrap_content"
                 android:text="特别鸣谢："
                 android:textColor="@color/colorPrimary"
-                android:textSize="22dp" />
+                android:textSize="20dp" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -197,7 +197,7 @@
                 android:layout_height="wrap_content"
                 android:text="开发者自语:"
                 android:textColor="@color/colorPrimary"
-                android:textSize="22dp" />
+                android:textSize="20dp" />
 
             <TextView
                 android:layout_width="match_parent"
