--- a/app/src/main/res/layout/fragement_more.xml
+++ b/app/src/main/res/layout/fragement_more.xml
@@ -51,7 +51,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
+                        android:layout_margin="8dp"
                         android:orientation="vertical">
 
                         <LinearLayout
@@ -72,7 +72,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
-                            android:layout_marginTop="10dp">
+                            android:layout_marginTop="8dp">
 
                             <LinearLayout
                                 android:layout_width="match_parent"
@@ -232,7 +232,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
-                            android:layout_marginTop="10dp">
+                            android:layout_marginTop="8dp">
 
                             <LinearLayout
                                 android:layout_width="match_parent"
@@ -245,14 +245,14 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center"
-                                    android:layout_margin="10dp"
+                                    android:layout_marginTop="6dp"
                                     android:layout_weight="1"
                                     android:orientation="vertical">
 
                                     <ImageView
                                         android:id="@+id/more_resit_schedule_picture"
                                         android:layout_width="30dp"
-                                        android:layout_height="30dp"
+                                        android:layout_height="34dp"
                                         android:layout_centerHorizontal="true"
                                         android:layout_weight="1"
                                         android:baselineAlignBottom="false"
@@ -327,7 +327,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
+                        android:layout_margin="8dp"
                         android:orientation="vertical">
 
                         <LinearLayout
@@ -498,7 +498,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
+                        android:layout_margin="8dp"
                         android:orientation="vertical">
 
                         <LinearLayout
@@ -520,7 +520,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
-                            android:layout_marginTop="10dp">
+                            android:layout_marginTop="8dp">
 
                             <LinearLayout
                                 android:layout_width="match_parent"
@@ -683,13 +683,14 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
-                            android:layout_marginTop="10dp">
+                            android:layout_marginTop="8dp">
 
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:orientation="vertical"
                                 android:layout_weight="1">
+
                                 <RelativeLayout
                                     android:id="@+id/more_url_lijiang"
                                     android:layout_width="wrap_content"
@@ -807,7 +808,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
+                        android:layout_margin="8dp"
                         android:orientation="vertical">
 
                         <LinearLayout
@@ -828,7 +829,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
-                            android:layout_marginTop="10dp">
+                            android:layout_marginTop="8dp">
 
                             <LinearLayout
                                 android:layout_width="match_parent"
