--- a/app/src/main/res/layout/fragement_more.xml
+++ b/app/src/main/res/layout/fragement_more.xml
@@ -246,6 +246,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center"
                                     android:layout_marginTop="6dp"
+                                    android:layout_marginBottom="10dp"
                                     android:layout_weight="1"
                                     android:orientation="vertical">
 
