perf:设置是否在课表显示课内实验安排 perf:增加查看全部实验功能 fix:临时修复屏幕反转后更新按钮消失的bug fix:recycleView项目过多时当前星期高亮错误的bug perf:存储类重新规划 perf:实验安排没有备注则隐藏

--- a/app/src/main/res/xml/pref_setting.xml
+++ b/app/src/main/res/xml/pref_setting.xml
@@ -29,6 +29,12 @@
 
         <SwitchPreference
             android:defaultValue="true"
+            android:key="show_lib_on_table"
+            android:summary="开启后课内实验将在日课表和周课表显示"
+            android:title="课表显示课内实验" />
+
+        <SwitchPreference
+            android:defaultValue="true"
             android:key="show_exam_on_table"
             android:summary="开启后考试安排将在日课表和周课表显示"
             android:title="课表显示考试安排" />
