--- a/app/src/main/res/layout/fragement_more.xml
+++ b/app/src/main/res/layout/fragement_more.xml
@@ -278,7 +278,35 @@
                                 android:orientation="vertical"
                                 android:layout_weight="1">
 
+                                <RelativeLayout
+                                    android:id="@+id/more_lib_schedule"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center"
+                                    android:layout_marginTop="6dp"
+                                    android:layout_marginBottom="10dp"
+                                    android:layout_weight="1"
+                                    android:orientation="vertical">
 
+                                    <ImageView
+                                        android:id="@+id/more_lib_schedule_picture"
+                                        android:layout_width="30dp"
+                                        android:layout_height="34dp"
+                                        android:layout_centerHorizontal="true"
+                                        android:layout_weight="1"
+                                        android:baselineAlignBottom="false"
+                                        android:src="@drawable/m_shiyanping" />
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_below="@+id/more_lib_schedule_picture"
+                                        android:layout_centerInParent="true"
+                                        android:layout_weight="1"
+                                        android:text="实验安排"
+                                        android:textSize="13dp" />
+
+                                </RelativeLayout>
 
                             </LinearLayout>
 
