--- a/app/src/main/res/layout/fragment_day_class.xml
+++ b/app/src/main/res/layout/fragment_day_class.xml
@@ -28,6 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16dp"
+            android:text="点击更新"
             android:textColor="@color/app_white"
             android:layout_centerVertical="true"
             android:layout_marginLeft="97dp"
