--- a/app/src/main/res/layout/header_base_func.xml
+++ b/app/src/main/res/layout/header_base_func.xml
@@ -5,25 +5,44 @@
     android:background="@color/colorPrimary">
 
     <LinearLayout
-        android:id="@+id/id_class_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:layout_centerInParent="true"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/id_title"
+        android:gravity="center_horizontal"
+        android:id="@+id/id_class_layout"
+        android:orientation="horizontal">
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="课程表"
-            android:textColor="@color/app_white"
-            android:textSize="16sp" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="选择周次"
-            android:textColor="@color/ic_launcher_background"
-            android:textSize="10sp" />
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/id_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="课程表"
+                android:textColor="@color/app_white"
+                android:textSize="16sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="选择周次"
+                android:textColor="@color/ic_launcher_background"
+                android:textSize="10sp" />
+
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/deltaIcon"
+            android:layout_marginBottom="5dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/delta"/>
+
     </LinearLayout>
 
     <ImageView
