perf:调整实验页面布局 fix:计划课程提示信息错误的bug perf:调整部分文案和图标

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -196,7 +196,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="wing  |  tank  |  uuin  |  ssbird"/>
+                    android:text="wing  |  ssbird  |  tank  |  uuin"/>
 
                 <View
                     android:layout_width="match_parent"
@@ -229,7 +229,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Casual  |  就这  |  ୧⍤⃝ⓍⓅ乏了  |  我终究不是个好人"/>
+                    android:text="Casual  |  就这  |  ୧⍤⃝ⓍⓅ乏了  |  我终究不是个好人  |  🍓"/>
 
                 <View
                     android:layout_width="match_parent"
