--- a/app/src/main/res/layout/activity_planned_courses.xml
+++ b/app/src/main/res/layout/activity_planned_courses.xml
@@ -55,7 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:text="正常查询，请稍后！"
+        android:text="正在查询，请稍后！"
         android:textSize="18dp" />
 
     <LinearLayout
