--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,16 +1,17 @@
 <resources>
 
-
-
     <!-- Base application theme. -->
     <style name="AppTheme" parent="XUITheme.Phone">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textViewStyle">@style/MyTextViewStyle</item>
     </style>
 
-
+    <style name="MyTextViewStyle" parent="android:Widget.TextView">
+        <item name="android:textColor">#8A000000</item>
+    </style>
 
     <!-- 右圆角样式 -->
     <style name="right_layout">
