--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -229,7 +229,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Casual  |  就这  |  ୧⍤⃝ⓍⓅ乏了  |  我终究不是个好人  |  🍓"/>
+                    android:text="@string/thanks_person"/>
 
                 <View
                     android:layout_width="match_parent"
