--- a/app/src/main/res/layout/fragement_more.xml
+++ b/app/src/main/res/layout/fragement_more.xml
@@ -940,6 +940,35 @@
                                 android:orientation="vertical"
                                 android:layout_weight="1">
 
+                                <RelativeLayout
+                                    android:id="@+id/more_test"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center"
+                                    android:layout_margin="10dp"
+                                    android:layout_weight="1"
+                                    android:orientation="vertical">
+
+                                    <ImageView
+                                        android:id="@+id/more_test_picture"
+                                        android:layout_width="30dp"
+                                        android:layout_height="30dp"
+                                        android:layout_centerHorizontal="true"
+                                        android:layout_weight="1"
+                                        android:baselineAlignBottom="false"
+                                        android:src="@drawable/m_pingjiao" />
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_below="@+id/more_test_picture"
+                                        android:layout_centerInParent="true"
+                                        android:layout_weight="1"
+                                        android:text="测试"
+                                        android:textSize="13dp" />
+
+                                </RelativeLayout>
+
                             </LinearLayout>
 
                             <LinearLayout
