--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_gravity="center_vertical"
     tools:context=".MainActivity">
@@ -27,6 +28,41 @@
                 android:textStyle="bold" />
 
         </RelativeLayout>
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal">-->
+
+<!--            <com.xuexiang.xui.widget.textview.supertextview.SuperButton-->
+<!--                android:layout_height="40dp"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_marginLeft="20dp"-->
+<!--                android:layout_marginRight="10dp"-->
+<!--                app:sCornersRadius="20dp"-->
+<!--                android:layout_marginTop="16dp"-->
+<!--                android:layout_marginBottom="16dp"-->
+<!--                android:textColor="@color/app_white"-->
+<!--                app:sSelectorNormalColor="@color/app_green"-->
+<!--                app:sSelectorPressedColor="@color/app_green"-->
+<!--                android:layout_weight="1"-->
+<!--                android:text="智慧校园" />-->
+
+<!--            <com.xuexiang.xui.widget.textview.supertextview.SuperButton-->
+<!--                android:layout_height="40dp"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_marginLeft="10dp"-->
+<!--                android:layout_marginRight="20dp"-->
+<!--                app:sCornersRadius="20dp"-->
+<!--                android:layout_marginTop="16dp"-->
+<!--                android:layout_marginBottom="16dp"-->
+<!--                android:textColor="@color/app_white"-->
+<!--                app:sSelectorNormalColor="@color/app_green"-->
+<!--                app:sSelectorPressedColor="@color/app_green"-->
+<!--                android:layout_weight="1"-->
+<!--                android:text="教务登录" />-->
+
+<!--        </LinearLayout>-->
 
         <RelativeLayout
             android:layout_width="match_parent"
