--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_gravity="center_vertical"
-    tools:context=".MainActivity">
+    tools:context=".LoginActivity">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -29,45 +29,47 @@
 
         </RelativeLayout>
 
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="horizontal">-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-<!--            <com.xuexiang.xui.widget.textview.supertextview.SuperButton-->
-<!--                android:layout_height="40dp"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_marginLeft="20dp"-->
-<!--                android:layout_marginRight="10dp"-->
-<!--                app:sCornersRadius="20dp"-->
-<!--                android:layout_marginTop="16dp"-->
-<!--                android:layout_marginBottom="16dp"-->
-<!--                android:textColor="@color/app_white"-->
-<!--                app:sSelectorNormalColor="@color/app_green"-->
-<!--                app:sSelectorPressedColor="@color/app_green"-->
-<!--                android:layout_weight="1"-->
-<!--                android:text="智慧校园" />-->
+            <com.xuexiang.xui.widget.textview.supertextview.SuperButton
+                android:onClick="chooseFun1"
+                android:layout_height="40dp"
+                android:layout_width="match_parent"
+                android:layout_marginLeft="50dp"
+                android:layout_marginRight="10dp"
+                app:sCornersRadius="20dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:textColor="@color/app_white"
+                app:sSelectorNormalColor="@color/app_green"
+                app:sSelectorPressedColor="@color/app_green"
+                android:layout_weight="1"
+                android:text="智慧校园" />
 
-<!--            <com.xuexiang.xui.widget.textview.supertextview.SuperButton-->
-<!--                android:layout_height="40dp"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_marginLeft="10dp"-->
-<!--                android:layout_marginRight="20dp"-->
-<!--                app:sCornersRadius="20dp"-->
-<!--                android:layout_marginTop="16dp"-->
-<!--                android:layout_marginBottom="16dp"-->
-<!--                android:textColor="@color/app_white"-->
-<!--                app:sSelectorNormalColor="@color/app_green"-->
-<!--                app:sSelectorPressedColor="@color/app_green"-->
-<!--                android:layout_weight="1"-->
-<!--                android:text="教务登录" />-->
+            <com.xuexiang.xui.widget.textview.supertextview.SuperButton
+                android:onClick="chooseFun2"
+                android:layout_height="40dp"
+                android:layout_width="match_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="50dp"
+                app:sCornersRadius="20dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:textColor="@color/app_white"
+                app:sSelectorNormalColor="@color/app_blue1"
+                app:sSelectorPressedColor="@color/app_blue1"
+                android:layout_weight="1"
+                android:text="教务登录" />
 
-<!--        </LinearLayout>-->
+        </LinearLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:layout_marginTop="48dp">
+            android:layout_marginTop="18dp">
 
             <ImageView
                 android:layout_width="39dp"
