--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -11,6 +11,10 @@
         <item>第一学期</item>
         <item>第二学期</item>
     </string-array>
+    <string-array name="loginType">
+        <item>智慧校园</item>
+        <item>教务登录</item>
+    </string-array>
     <string-array name="spinnerWeeks">
         <item>第1周</item>
         <item>第2周</item>
